no bug - Import translations from android-l10n r=release a=l10n CLOSED TREE
UltraBlame original commit: 9aa4ac31348f90a8557bd90934c94d8ca39b1870

--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-sq/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-sq/strings.xml
@@ -4309,13 +4309,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4371,6 +4387,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4391,6 +4423,40 @@ instalohet
 ky
 zgjerim
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+S
+instalohet
+dot
+zgjerimi
 <
 /
 string
@@ -4664,6 +4730,20 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4686,6 +4766,77 @@ ndrueshm
 rie
 ose
 sigurie
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+%
+1
+s
+cenon
+rregullat
+e
+Mozilla
+-
+s
+dhe
+s
+mund
+t
+instalohet
+n
+%
+2
+s
 .
 <
 /
@@ -4770,6 +4921,152 @@ n
 k
 t
 platform
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+%
+1
+s
+cenon
+rregullat
+e
+Mozilla
+-
+s
+dhe
+s
+mund
+t
+instalohet
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+%
+1
+s
+cenon
+rregullat
+e
+Mozilla
+-
+s
+dhe
+s
+mund
+t
+instalohet
+n
+%
+2
+s
 .
 <
 /
@@ -5829,6 +6126,42 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Shihni
+holl
+sit
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -5871,6 +6204,20 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -5886,6 +6233,293 @@ ose
 q
 ndrueshm
 rie
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+Ky
+zgjerim
+sht
+bllokuar
+ngaq
+cenon
+rregullat
+e
+Mozilla
+-
+s
+dhe
+sht
+aktivizuar
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Ky
+zgjerim
+sht
+bllokuar
+ngaq
+cenon
+rregullat
+e
+Mozilla
+-
+s
+dhe
+sht
+aktivizuar
+.
+Mund
+ta
+aktivizoni
+por
+kjo
+mund
+t
+jet
+e
+rrezikshme
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
+"
+>
+Ky
+zgjerim
+sht
+kufizuar
+ngaq
+cenon
+rregullat
+e
+Mozilla
+-
+s
+dhe
+sht
+aktivizuar
+.
+Mund
+ta
+aktivizoni
+por
+kjo
+mund
+t
+jet
+e
+rrezikshme
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+Ky
+zgjerim
+cenon
+rregullat
+e
+Mozilla
+-
+s
+.
+P
+rdorimi
+i
+tij
+mund
+t
+jet
+me
+rrezik
 .
 <
 /
