--- a/mobile/android/fenix/app/src/main/res/values-gn/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-gn/strings.xml
@@ -3362,6 +3362,148 @@ string
 Browser
 menu
 banner
+body
+text
+for
+extensions
+onboarding
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+app
+defined
+in
+app_name
+(
+for
+example
+:
+Fenix
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_extensions_banner_onboarding_body
+"
+>
+Umi
+jepysokue
+omboha
+eve
+ne
+eikundaha
+omoambu
+vo
+ijehecha
+ha
+%
+s
+pya
+ekue
+omombaretev
+vo
+teko
+emi
+ha
+tekoros
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
+body
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+button
+that
+opens
+extension
+manager
+(
+for
+example
+"
+Manage
+extensions
+"
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_body
+"
+>
+Eipor
+vo
+jepysokue
+emyandy
+embohek
+pe
+t
+r
+eiporav
+vo
+%
+s
+eku
+e
+je
+vo
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
 link
 text
 for
@@ -3879,6 +4021,66 @@ mba
 erechaha
 epyr
 gua
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+notifying
+users
+that
+Xiaomi
+devices
+require
+additional
+permissions
+to
+add
+to
+home
+screen
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_add_to_homescreen_xiaomi
+"
+>
+Ikatu
+umi
+Xiaomi
+mba
+e
+oka
+oikotev
+emone
+ve
+ombojuaju
+hag
+ua
+jeike
+pya
+er
+mba
+erechaha
+epyr
+gu
+pe
+.
+Ehecha
+jey
+ne
+emboheko
+.
 <
 /
 string
@@ -8397,6 +8599,123 @@ string
 -
 -
 Onboarding
+header
+for
+the
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Nimbus
+experiments
+do
+not
+support
+string
+placeholders
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_header
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Emboavaite
+Firefox
+jepysokue
+ndive
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+sub
+header
+for
+the
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_sub_header
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Embojuaju
+jepysokue
+mbohapyh
+va
+emombareteve
+hag
+ua
+ne
+rekoros
+mba
+eapopy
+ha
+hetave
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
 add
 -
 ons
@@ -8528,13 +8847,6 @@ name
 "
 onboarding_add_on_explore_more_extensions_2
 "
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
 >
 Ejeporekave
 jepysoku
@@ -8570,13 +8882,6 @@ name
 =
 "
 onboarding_add_on_start_browsing_button_2
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 E
@@ -8752,6 +9057,62 @@ string
 !
 -
 -
+Privacy
+Badger
+description
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_privacy_badger_description
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Ipor
+va
+tapykueh
+pe
+.
+Ejoko
+tapykueho
+jehecha
+va
+ha
+marandu
+emi
+iva
+va
+.
+<
+/
+string
+>
+<
+!
+-
+-
 Search
 by
 Image
@@ -8917,6 +9278,221 @@ UnusedResources
 >
 Dark
 Reader
+<
+/
+string
+>
+<
+!
+-
+-
+Privacy
+Badger
+description
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_dark_reader_description
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Ypyt
+reko
+mba
+et
+va
+pumbyr
+pe
+g
+uar
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+for
+the
+number
+of
+reviews
+for
+an
+add
+-
+on
+.
+The
+parameter
+is
+for
+the
+formatted
+number
+of
+reviews
+e
+.
+g
+.
+"
+1
+234
+"
+"
+12
+345
+"
+"
+123
+456
+"
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_reviews_label
+"
+>
+Jehechajey
+:
+%
+1
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+add
+-
+on
+icon
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_icon_content_description
+"
+>
+Mo
+mbaha
+ra
+nga
+i
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+add
+add
+-
+on
+button
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_add_button_content_description
+"
+>
+Vot
+embojuaju
+hag
+ua
+mo
+mbaha
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+star
+rating
+group
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_star_rating_content_description
+"
+>
+eha
+%
+1
+s
+5
+-
+gui
 <
 /
 string
@@ -21657,6 +22233,54 @@ Eike
 embojuehe
 hag
 ua
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+bookmark
+list
+empty
+state
+when
+you
+'
+re
+in
+an
+empty
+folder
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_folder_description
+"
+>
+Embojuaju
+techaukaha
+eikundaha
+aja
+ejuju
+hag
+ua
+erohoryv
+va
+tenda
+ag
+ave
+.
 <
 /
 string
