--- a/mobile/android/fenix/app/src/main/res/values-sv-rSE/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-sv-rSE/strings.xml
@@ -7105,9 +7105,77 @@ name
 "
 search_engine_icon_content_description
 "
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+133
+"
 >
 S
 kmotor
+%
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Search
+engine
+icon
+.
+The
+parameter
+is
+the
+search
+engine
+name
+(
+for
+example
+:
+DuckDuckGo
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+search_engine_icon_content_description_1
+"
+>
+S
+kmotor
+:
 %
 s
 <
@@ -9553,12 +9621,11 @@ name
 onboarding_add_on_add_button_content_description
 "
 >
-Knappen
 L
 gg
 till
 till
-gg
+ggsknapp
 <
 /
 string
@@ -22312,6 +22379,74 @@ gg
 till
 en
 ny
+mapp
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+bookmark
+screen
+delete
+bookmark
+navigation
+bar
+button
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_bookmark_content_description
+"
+>
+Ta
+bort
+bokm
+rke
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+bookmark
+screen
+delete
+bookmark
+folder
+navigation
+bar
+button
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_folder_content_description
+"
+>
+Ta
+bort
 mapp
 <
 /
