--- a/mobile/android/android-components/components/feature/prompts/src/main/res/values-gn/strings.xml
+++ b/mobile/android/android-components/components/feature/prompts/src/main/res/values-gn/strings.xml
@@ -349,54 +349,6 @@ string
 name
 =
 "
-mozac_feature_prompt_dont_save
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Ani
-e
-ongatu
-<
-/
-string
->
-<
-!
--
--
-Negative
-confirmation
-that
-we
-should
-not
-save
-the
-new
-or
-updated
-login
--
--
->
-<
-string
-name
-=
-"
 mozac_feature_prompt_dont_save_2
 "
 >
@@ -532,51 +484,6 @@ string
 name
 =
 "
-mozac_feature_prompt_dont_update
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Ani
-embohekopyahu
-<
-/
-string
->
-<
-!
--
--
-Negative
-confirmation
-that
-we
-should
-not
-save
-the
-updated
-login
--
--
->
-<
-string
-name
-=
-"
 mozac_feature_prompt_dont_update_2
 "
 >
@@ -643,118 +550,12 @@ string
 name
 =
 "
-mozac_feature_prompt_error_empty_password
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Pe
-e
-emi
-kora
-ndopytaiva
-er
-nandi
-<
-/
-string
->
-<
-!
--
--
-Error
-text
-displayed
-underneath
-the
-password
-field
-when
-it
-is
-in
-an
-error
-case
--
--
->
-<
-string
-name
-=
-"
 mozac_feature_prompt_error_empty_password_2
 "
 >
 Emoinge
 e
 emi
-<
-/
-string
->
-<
-!
--
--
-Error
-text
-displayed
-underneath
-the
-login
-field
-when
-it
-is
-in
-an
-error
-case
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompt_error_unknown_cause
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Nere
-ongatukua
-i
-tembiapo
-epyr
 <
 /
 string
@@ -794,69 +595,6 @@ ongat
 i
 e
 emi
-<
-/
-string
->
-<
-!
--
--
-Prompt
-message
-displayed
-when
-app
-detects
-a
-user
-has
-entered
-a
-new
-username
-and
-password
-and
-user
-decides
-if
-app
-should
-save
-the
-new
-login
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompt_login_save_headline
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Tembiapo
-epyr
-ongatu
-?
 <
 /
 string
@@ -940,70 +678,6 @@ app
 should
 update
 the
-login
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompt_login_update_headline
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Tembiapo
-epyr
-mbohekopyahu
-?
-<
-/
-string
->
-<
-!
--
--
-Prompt
-message
-displayed
-when
-app
-detects
-a
-user
-has
-entered
-a
-new
-password
-for
-an
-existing
-login
-and
-user
-decides
-if
-app
-should
-update
-the
 password
 .
 -
@@ -1020,78 +694,6 @@ mozac_feature_prompt_login_update_headline_2
 Embohekopyahu
 e
 emi
-?
-<
-/
-string
->
-<
-!
--
--
-Prompt
-message
-displayed
-when
-app
-detects
-a
-user
-has
-entered
-a
-username
-for
-an
-existing
-login
-without
-a
-username
-and
-user
-decides
-if
-app
-should
-update
-the
-login
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompt_login_add_username_headline
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Embojuaju
-poruh
-ra
-r
-ra
-e
-emi
-ongatupyr
-pe
 ?
 <
 /
@@ -2038,54 +1640,6 @@ Option
 in
 expanded
 select
-login
-prompt
-that
-links
-to
-login
-settings
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_manage_logins
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Tembiapo
-epyr
-angarekoh
-ra
-<
-/
-string
->
-<
-!
--
--
-Option
-in
-expanded
-select
 password
 prompt
 that
@@ -2109,58 +1663,6 @@ angareko
 e
 em
 re
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-expanding
-the
-saved
-logins
-options
-in
-the
-select
-login
-prompt
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_expand_logins_content_description
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Emoas
-i
-tembiapo
-epyr
-je
-epyre
 <
 /
 string
@@ -2212,57 +1714,6 @@ for
 collapsing
 the
 saved
-logins
-options
-in
-the
-select
-login
-prompt
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_collapse_logins_content_description
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Emomich
-tembiapo
-epyr
-je
-epyre
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-collapsing
-the
-saved
 passwords
 options
 in
@@ -2287,60 +1738,6 @@ i
 e
 emi
 ongatupyre
-<
-/
-string
->
-<
-!
--
--
-Header
-for
-the
-select
-login
-prompt
-to
-allow
-users
-to
-fill
-a
-form
-with
-a
-saved
-login
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_saved_logins
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Tembiapo
-epyr
-je
-epyre
 <
 /
 string
@@ -2417,63 +1814,6 @@ name
 =
 "
 mozac_feature_prompts_suggest_strong_password_content_description
-"
->
-Eikuave
-e
-emi
-hekoros
-va
-<
-/
-string
->
-<
-!
--
--
-Header
-for
-the
-suggest
-strong
-password
-prompt
-to
-allow
-users
-to
-fill
-a
-form
-with
-a
-suggested
-strong
-password
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_suggest_strong_password
-"
-moz
-:
-removedIn
-=
-"
-128
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 Eikuave
@@ -2631,39 +1971,110 @@ string
 name
 =
 "
-mozac_feature_prompts_suggest_strong_password_description
+mozac_feature_prompts_suggest_strong_password_description_2
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Emo
 ne
 mba
-ete
+eteku
+ra
 eipor
 vo
 e
 emi
 hekoros
 va
-ejap
-va
-eiporu
-hag
-ua
+o
+emohe
+iva
+ijer
+re
 .
-Eike
-pya
-e
-ne
-e
-em
-me
+O
 e
 ongat
-vo
+ta
 ne
 mba
 et
 pe
+eiporu
+hag
+ua
+uperire
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+suggest
+strong
+password
+confirmation
+dialog
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_suggest_strong_password_description_3
+"
+>
+Emo
+ne
+mba
+eteku
+ra
+eipor
+vo
+e
+emi
+hekoros
+va
+o
+emohe
+iva
+ijer
+re
+.
+O
+e
+ongat
+ta
+ne
+mba
+et
+pe
+eiporu
+hag
+ua
+uperire
 .
 <
 /
@@ -2989,63 +2400,6 @@ Header
 for
 the
 select
-credit
-card
-prompt
-to
-allow
-users
-to
-fill
-a
-form
-with
-a
-saved
-credit
-card
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_select_credit_card
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Eiporavo
-kuatia
-at
-emur
-<
-/
-string
->
-<
-!
--
--
-Header
-for
-the
-select
 card
 prompt
 to
@@ -3075,64 +2429,6 @@ Eiporu
 kuatia
 at
 ongatupyre
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-expanding
-the
-select
-credit
-card
-options
-in
-the
-select
-credit
-card
-prompt
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_expand_credit_cards_content_description
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Emoas
-i
-kuatia
-at
-emur
-rys
-i
-je
-epyre
 <
 /
 string
@@ -3184,61 +2480,6 @@ description
 for
 collapsing
 the
-select
-credit
-card
-options
-in
-the
-select
-credit
-prompt
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_collapse_credit_cards_content_description
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-E
-omi
-kuatia
-at
-emur
-je
-epyre
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-collapsing
-the
 saved
 card
 options
@@ -3264,60 +2505,6 @@ i
 kuatia
 at
 ongatupyre
-<
-/
-string
->
-<
-!
--
--
-Option
-in
-the
-expanded
-select
-credit
-card
-prompt
-that
-links
-to
-credit
-cards
-settings
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_manage_credit_cards
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-E
-angareko
-kuatia
-at
-emur
-re
 <
 /
 string
@@ -3447,68 +2634,6 @@ the
 title
 of
 the
-save
-credit
-card
-dialog
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_save_credit_card_prompt_body
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Kuatia
-at
-papapy
-ipe
-aha
-em
-ta
-.
-Pe
-aha
-emi
-no
-e
-ongatumo
-i
-.
-<
-/
-string
->
-<
-!
--
--
-Subtitle
-text
-displayed
-under
-the
-title
-of
-the
 saved
 card
 dialog
@@ -3608,59 +2733,6 @@ description
 for
 expanding
 the
-select
-addresses
-options
-in
-the
-select
-address
-prompt
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_expand_address_content_description
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Emoas
-i
-kundaharape
-je
-epyr
-va
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-expanding
-the
 saved
 addresses
 options
@@ -3685,58 +2757,6 @@ Emyas
 i
 kundaharape
 ongatupyre
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-collapsing
-the
-select
-address
-options
-in
-the
-select
-address
-prompt
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_collapse_address_content_description
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Emomich
-kundaharape
-je
-epyr
-va
 <
 /
 string
@@ -4061,6 +3081,13 @@ name
 =
 "
 mozac_feature_prompts_identity_credentials_privacy_policy_description
+"
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
 "
 >
 <
