--- a/mobile/android/android-components/components/ui/tabcounter/src/main/res/values-pt-rPT/strings.xml
+++ b/mobile/android/android-components/components/ui/tabcounter/src/main/res/values-pt-rPT/strings.xml
@@ -19,6 +19,38 @@ utf
 >
 <
 resources
+xmlns
+:
+tools
+=
+"
+http
+:
+/
+/
+schemas
+.
+android
+.
+com
+/
+tools
+"
+xmlns
+:
+moz
+=
+"
+http
+:
+/
+/
+mozac
+.
+org
+/
+tools
+"
 >
 <
 !
@@ -46,6 +78,20 @@ name
 =
 "
 mozac_tab_counter_open_tab_tray_single
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 1
@@ -88,6 +134,20 @@ name
 =
 "
 mozac_tab_counter_open_tab_tray_plural
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 %
