--- a/mobile/android/fenix/app/src/main/res/values-bs/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-bs/strings.xml
@@ -8871,13 +8871,6 @@ name
 "
 onboarding_add_on_explore_more_extensions_2
 "
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
 >
 Istra
 ite
@@ -8915,13 +8908,6 @@ name
 =
 "
 onboarding_add_on_start_browsing_button_2
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 Zapo
@@ -9370,6 +9356,164 @@ za
 mobilni
 web
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+for
+the
+number
+of
+reviews
+for
+an
+add
+-
+on
+.
+The
+parameter
+is
+for
+the
+formatted
+number
+of
+reviews
+e
+.
+g
+.
+"
+1
+234
+"
+"
+12
+345
+"
+"
+123
+456
+"
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_reviews_label
+"
+>
+Recenzije
+:
+%
+1
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+add
+-
+on
+icon
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_icon_content_description
+"
+>
+Ikona
+dodatka
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+add
+add
+-
+on
+button
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_add_button_content_description
+"
+>
+Dugme
+za
+dodavanje
+dodataka
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+star
+rating
+group
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_star_rating_content_description
+"
+>
+Ocjena
+%
+1
+s
+od
+5
 <
 /
 string
