--- a/mobile/android/fenix/app/src/main/res/values-en-rGB/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-en-rGB/strings.xml
@@ -6939,11 +6939,79 @@ name
 "
 search_engine_icon_content_description
 "
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+133
+"
 >
 %
 s
 search
 engine
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Search
+engine
+icon
+.
+The
+parameter
+is
+the
+search
+engine
+name
+(
+for
+example
+:
+DuckDuckGo
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+search_engine_icon_content_description_1
+"
+>
+Search
+engine
+:
+%
+s
 <
 /
 string
@@ -8722,13 +8790,6 @@ name
 "
 onboarding_add_on_explore_more_extensions_2
 "
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
 >
 Explore
 more
@@ -8764,13 +8825,6 @@ name
 =
 "
 onboarding_add_on_start_browsing_button_2
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 Start
@@ -9213,6 +9267,168 @@ the
 mobile
 web
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+for
+the
+number
+of
+reviews
+for
+an
+add
+-
+on
+.
+The
+parameter
+is
+for
+the
+formatted
+number
+of
+reviews
+e
+.
+g
+.
+"
+1
+234
+"
+"
+12
+345
+"
+"
+123
+456
+"
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_reviews_label
+"
+>
+Reviews
+:
+%
+1
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+add
+-
+on
+icon
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_icon_content_description
+"
+>
+Add
+-
+on
+icon
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+add
+add
+-
+on
+button
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_add_button_content_description
+"
+>
+Add
+add
+-
+on
+button
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+star
+rating
+group
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_star_rating_content_description
+"
+>
+Rated
+%
+1
+s
+out
+of
+5
 <
 /
 string
@@ -21621,6 +21837,71 @@ bookmark_add_new_folder_button_content_description
 Add
 a
 new
+folder
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+bookmark
+screen
+delete
+bookmark
+navigation
+bar
+button
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_bookmark_content_description
+"
+>
+Delete
+bookmark
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+bookmark
+screen
+delete
+bookmark
+folder
+navigation
+bar
+button
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_folder_content_description
+"
+>
+Delete
 folder
 <
 /
