--- a/mobile/android/focus-android/app/src/main/res/values-vi/strings.xml
+++ b/mobile/android/focus-android/app/src/main/res/values-vi/strings.xml
@@ -1486,64 +1486,6 @@ web
 string
 >
 <
-string
-name
-=
-"
-notification_erase_text_android_14
-"
-moz
-:
-RemovedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Nh
-n
-ho
-c
-x
-a
-th
-ng
-b
-o
-n
-y
-x
-a
-l
-ch
-s
-duy
-t
-web
-c
-a
-b
-n
-m
-t
-c
-ch
-an
-to
-n
-.
-<
-/
-string
->
-<
 !
 -
 -
@@ -7850,6 +7792,20 @@ name
 "
 onboarding_close_button_content_description
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 ng
 <
@@ -10009,10 +9965,8 @@ hi
 u
 c
 a
-T
-ch
-c
 Mozilla
+Foundation
 ho
 c
 b
@@ -14731,60 +14685,6 @@ open_new_tab_snackbar
 >
 Chuy
 n
-<
-/
-string
->
-<
-!
--
--
-Text
-displayed
-in
-a
-notification
-when
-the
-user
-enters
-full
-screen
-mode
--
--
->
-<
-string
-name
-=
-"
-full_screen_notification
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-v
-o
-ch
-to
-n
-m
-n
-h
-nh
 <
 /
 string
