Bug 1921226 - Change expiration time for HTTPS upgrade exceptions r=maltejur
Differential Revision: https://phabricator.services.mozilla.com/D226274

UltraBlame original commit: c5674feb97180f25b16b464eb59cfad02a5f0c09

--- a/dom/locales/en-US/chrome/security/security.properties
+++ b/dom/locales/en-US/chrome/security/security.properties
@@ -3044,19 +3044,17 @@ will
 be
 added
 ;
-HTTPSFirstAddingSessionException
+HTTPSFirstAddingException
 =
-Website
-does
-not
-appear
+Adding
+exception
 to
-support
-HTTPS
-.
-Further
+temporarily
+prevent
+further
 attempts
 to
+automatically
 load
 http
 :
@@ -3065,10 +3063,6 @@ http
 %
 S
 securely
-will
-be
-skipped
-temporarily
 .
 #
 LOCALIZATION
